# rural-geog-classif

./: .gitignore  Makefile  pyproject.toml  status.csv  status.py
.github/workflows/: deploy.yml
extract/: README.md
extract/hand/: README.md  coded_rural_simple.csv
extract/input/: Coded Rural Geog All 1986-2025 WoS List 4-7-2026(savedrecs).csv  Full Dataset Rur Geog WoS 1986-2025 4-28-2026.csv
extract/src/: fetch_openalex.py  parse_csv.py  pdf_to_dois.py
extract/tests/: test_years.py
frontend/: package-lock.json  package.json  svelte.config.js
parse/: README.md
parse/src/: parse_pdfs.py
summarize/output/: 10.1080_00045600903378960.md  10.1080_00045600903550295.md  10.1080_00045608.2010.532741.md  10.1080_00045608.2011.567936.md  10.1080_00045608.2011.569659.md  10.1080_00045608.2011.584289.md  10.1080_00045608.2011.596392.md  10.1080_00045608.2011.620501.md  10.1080_00045608.2011.641861.md  10.1080_00045608.2011.641897.md  10.1080_00045608.2011.652871.md  10.1080_00045608.2011.653732.md  10.1080_00045608.2012.671127.md  10.1080_00045608.2012.671129.md  10.1080_00045608.2012.671133.md  10.1080_00045608.2012.678040.md  10.1080_00045608.2012.707591.md  10.1080_00045608.2012.720228.md  10.1080_00045608.2012.720234.md  10.1080_00045608.2013.756257.md  10.1080_00045608.2013.779549.md  10.1080_00045608.2014.892338.md  10.1080_00045608.2014.944453.md  10.1080_00045608.2014.985626.md  10.1080_00045608.2015.1060921.md  10.1080_00045608.2015.1113110.md  10.1080_00167428.2020.1779592.md  10.1080_00167428.2020.1786384.md  (+162 more)
tests/: test_doi_alignment.py  test_years.py
(+547 files in other folders)
