[project]
name = "rural-geog-classif"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.89.0",
    "adapters",
    "transformers",
    "torch",
    "numpy",
    "evoc",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
